<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_radioButton_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_radioButton_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radioButton_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="content_detail_label_text">File Name</string>
    <string name="content_detail_button_text">OK</string>
    <string name="content_detail_status_text">File Status</string>


    <string name="download_success_text">Success</string>
    <string name="download_error_text">Failed</string>

    // Notification
    <string name="notification_channel">Download</string>
    <string name="download_notification_channel_id" translatable="false">download_channel</string>

    <string name="invalid_option_text">You must make a selection</string>
    <string name="content_main_image_description">Download image with download arrow</string>
    <string name="notification_button_text">See details</string>

</resources>
