<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/content_detail_label_text"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:paddingStart="@dimen/small_margin"
        android:paddingLeft="@dimen/small_margin"
        android:paddingEnd="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/label_name"
        app:layout_constraintTop_toTopOf="@+id/label_name"
        tools:text="This is a filename" />


    <TextView
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:text="@string/content_detail_status_text"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:paddingStart="@dimen/small_margin"
        android:paddingLeft="@dimen/small_margin"
        android:paddingEnd="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toTopOf="@+id/label_status"
        tools:text="This is a status" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:padding="@dimen/normal_margin"
        android:text="@string/content_detail_button_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.motion.widget.MotionLayout>